# siade/app/interactors/insee/etablissement_diffusable/validate_response.rb
@@ -1,0 +1,13 @@
+class INSEE::EtablissementDiffusable::ValidateResponse < INSEE::Etablissement::ValidateResponse
+  def call
+    resource_not_found! if http_ok? && non_diffusable?
+
+    super
+  end
+
+  private
+
+  def non_diffusable?
+    json_body['etablissement']['statutDiffusionEtablissement'] == 'N'
+  end
+end
